<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="@string/nav_notes_group">
            <menu>
                <item
                    android:title="@string/all"
                    android:icon="@drawable/all_note_icon"
                    android:id="@+id/nav_all"
                    android:checkable="true"/>
                <item
                    android:title="@string/personal"
                    android:icon="@drawable/personal_icon"
                    android:checkable="true"
                    android:id="@+id/nav_personal"/>
                <item
                    android:title="@string/work"
                    android:icon="@drawable/work_icon"
                    android:checkable="true"
                    android:id="@+id/nav_work"/>
                <item
                    android:title="@string/health"
                    android:icon="@drawable/health_icon"
                    android:checkable="true"
                    android:id="@+id/nav_health"/>
                <item
                    android:title="@string/finance"
                    android:icon="@drawable/finance_icon"
                    android:checkable="true"
                    android:id="@+id/nav_finance"/>
                <item
                    android:title="@string/hobby"
                    android:icon="@drawable/hobbies_icon"
                    android:checkable="true"
                    android:id="@+id/nav_hobby"/>
                <item
                    android:title="@string/other"
                    android:icon="@drawable/other_icon"
                    android:checkable="true"
                    android:id="@+id/nav_other"/>
            </menu>
        </item>
    </group>

        <item android:title="@string/ai_tools_group">
            <menu>
                <item
                    android:title="@string/ai_transcribe"
                    android:icon="@drawable/video_transcript_icon"
                    android:id="@+id/nav_ai_transcribe"/>
                <item
                    android:title="@string/ai_summarize"
                    android:icon="@drawable/summarizer_icon"
                    android:id="@+id/nav_ai_summarize"/>
            </menu>
        </item>

        <item android:title="@string/upgrade_group">
            <menu>
                <item
                    android:title="@string/get_premium"
                    android:icon="@drawable/premium_icon"
                    android:id="@+id/nav_get_premium"/>
            </menu>
        </item>

</menu>