<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    tools:context=".view.ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextAppearance="@style/ToolbarText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_picture"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        app:shapeAppearanceOverlay="@style/rounded_image"
        android:src="@drawable/nav_drawer_header_img"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_toolbar"/>
    <TextView
        android:id="@+id/creative_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/hey_creative"
        android:fontFamily="@font/nexa_bold"
        app:layout_constraintStart_toEndOf="@id/profile_picture"
        app:layout_constraintTop_toBottomOf="@id/profile_toolbar"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/creative_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:text="@string/sign_in_to_sync_to_cloud"
        android:fontFamily="@font/nexa_bold"
        app:layout_constraintStart_toEndOf="@id/profile_picture"
        app:layout_constraintTop_toBottomOf="@id/creative_username"
        app:layout_constraintEnd_toEndOf="parent"/>
    <!--        <TextView-->
    <!--            android:id="@+id/creative_user_role"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginStart="20dp"-->
    <!--            android:layout_marginTop="7dp"-->
    <!--            android:text="PAID_USER"-->
    <!--            android:fontFamily="@font/nexa_bold"-->
    <!--            app:layout_constraintStart_toEndOf="@id/profile_picture"-->
    <!--            app:layout_constraintTop_toBottomOf="@id/creative_username"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"/>-->
    <Button
        android:id="@+id/sync_to_cloud_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:drawableLeft="@drawable/cloud_icon"
        android:text="@string/sync_to_cloud"
        android:textSize="17sp"
        android:fontFamily="@font/nexa_bold"
        android:textAllCaps="false"
        android:background="@drawable/rounded_desert_sunset_bg"
        app:layout_constraintTop_toBottomOf="@id/profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/download_notes_from_cloud_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:drawableLeft="@drawable/cloud_icon"
        android:text="@string/download_from_cloud"
        android:textSize="17sp"
        android:fontFamily="@font/nexa_bold"
        android:textAllCaps="false"
        android:background="@drawable/rounded_desert_sunset_bg"
        app:layout_constraintTop_toBottomOf="@id/sync_to_cloud_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/download_notes_from_cloud_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/dark_mode_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/dark_mode_icon"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:text="@string/dark_mode"
        android:textSize="17sp"
        android:fontFamily="@font/nexa_bold"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/download_notes_from_cloud_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/dark_mode_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/get_premium_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/premium_icon"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:text="@string/get_premium"
        android:textSize="17sp"
        android:fontFamily="@font/nexa_bold"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/dark_mode_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/app_version"
        android:textSize="18sp"
        android:fontFamily="@font/nexa_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>