<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".view.TextSummarizerActivity">

    <LinearLayout
        android:id="@+id/summarizer_animation_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:padding="20dp"
        android:orientation="vertical"
        android:gravity="center"
        android:elevation="15dp"
        android:background="@drawable/rounded_desert_sunset_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:elevation="15dp"
            app:lottie_rawRes="@raw/loading_anim"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:text="@string/summarizing_text_loading"
            android:textColor="?android:textColorPrimary"
            android:fontFamily="@font/nexa_bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text_summarizer_txt"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="65dp"
        android:paddingStart="20dp"
        android:gravity="center_vertical"
        android:background="@drawable/rounded_desert_sunset_bg"
        android:text="@string/text_summarizer"
        android:fontFamily="@font/nexa_bold"
        android:textSize="@dimen/text_headings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/enter_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:text="@string/enter_text_here"
        android:fontFamily="@font/nexa_bold"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/text_summarizer_txt"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/text_content_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:layout_marginTop="7dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:scrollbars="vertical"
        android:background="@drawable/transparent_desert_sunset_bg"
        android:inputType="textMultiLine"
        android:fontFamily="@font/nexa_light"
        app:layout_constraintTop_toBottomOf="@id/enter_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/clear_text_btn"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/rounded_desert_sunset_bg"
        android:text="@string/clear_text"
        android:textAllCaps="false"
        android:fontFamily="@font/nexa_bold"
        app:layout_constraintEnd_toStartOf="@id/summarize_text_btn"
        app:layout_constraintTop_toBottomOf="@+id/text_content_edt"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:id="@+id/summarize_text_btn"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/rounded_desert_sunset_bg"
        android:text="@string/summarize_text"
        android:textAllCaps="false"
        android:fontFamily="@font/nexa_bold"
        app:layout_constraintStart_toEndOf="@id/clear_text_btn"
        app:layout_constraintTop_toBottomOf="@+id/text_content_edt"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/copy_summerized_txt_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:elevation="5dp"
        android:src="@drawable/copy_text_icon"
        android:background="@drawable/rounded_desert_sunset_bg"
        app:layout_constraintTop_toTopOf="@id/summarized_txt_edt"
        app:layout_constraintBottom_toTopOf="@id/summarized_txt_edt"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>


    <EditText
        android:id="@+id/summarized_txt_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:scrollbars="vertical"
        android:background="@drawable/transparent_desert_sunset_bg"
        android:inputType="textMultiLine"
        android:fontFamily="@font/nexa_light"
        app:layout_constraintTop_toBottomOf="@id/summarize_text_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>